--- a/src/style.css
+++ b/src/style.css
@@ -187,31 +187,38 @@ body{
 .modal-content{
     position: relative;
     width: 80%;
-    height: 90%;
-    margin-top: 120px;
+    height: 80%;
     background-color: #464a4c;
     color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
 }
 
 .menu-img {
+    flex: 1;
+}
+
+.menu-img > img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .menu-items{
-    padding: 64px 48px 48px 48px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: space-between;*/
 }
 
 .menu-title{
-    display: inline-block;
+    margin: 10% 10% 0;
+    align-self: start;
     font-size: 42px;
     border-bottom: 5px solid #0b620b;
 }
 
 .items {
-    padding: 32px 0;
+    margin: 5% 10%;
     display: grid;
     grid-auto-rows: auto;
     font-size: 14px;
@@ -243,14 +250,14 @@ body{
 */
 
 #content >.Location {
-    background: url(../images/restaurant-in-valkenswaard.jpg) no-repeat center center fixed;
+    /*background: url(../images/restaurant-in-valkenswaard.jpg) no-repeat center center fixed;
     background-size: cover;
-    height: 100%;
+    height: 100%;*/
 }
 
 #content >.About {
-    background: url(../images/restaurant.jpg) no-repeat center center fixed;
+    /*background: url(../images/restaurant.jpg) no-repeat center center fixed;
     background-size: cover;
-    height: 100%;
+    height: 100%;*/
 }
 
