--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
 html{
-    box-sizing: border-box;
     min-height: 100vh;
     background-image: url(../images/background.jpg);
 }
@@ -7,6 +6,7 @@ html{
 html * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -36,15 +36,22 @@ body{
     width: 100%;
     color: aliceblue;
     font-size: 24px;
-    padding: 24px 0;
+    padding: 16px 0;
 }
 
 #header ul{
     list-style-type: none;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
-    padding: 0 10%;
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    padding: 0 5%;
+}
+
+#header .header-logo {
+    width: 80px;
+    justify-self: start;
+    margin-left: 20%;
+    cursor: pointer;
 }
 
 #header li{
