--- a/src/style.css
+++ b/src/style.css
@@ -236,6 +236,7 @@ body{
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow: auto;
     /*justify-content: space-between;*/
 }
 
@@ -393,9 +394,34 @@ body{
         width: 60px;
     }
 
-    #content .small-text {
-        column-count: auto;
+    #content .big-text{
+        font-weight: 600;
+        padding-top: 132px;
+        font-size: 48px;
     }
+    
+    #content .medium-text {
+        font-size: 32px;
+    }
+    
+    #content .small-text {
+        font-size: 12px;
+        column-count: auto;
+        padding: 8px 15%;
+    }
+
+    .menu-title {
+        font-size: 32px;
+    }
+
+    .item {
+        font-size: 10px;
+    }
+
+    .close-btn {
+        font-size: 24px;
+    }
+
 }
 
 @media only screen and (min-width: 700px){
